# shared/Api.Shared.Clients/Events/Skedular/SlackInternal/V1/SlackInternalValueMetadata.g.cs
@@ -22,7 +22,7 @@ public partial class Metadata : IMetadata { }
     retryTopicPartitionCount: 3,
     deadLetterTopicName: "slack.v1.internal.deadletter",
     deadLetterTopicPartitionCount: 3,
-    protobufSchema: "syntax = \"proto3\";package slackinternal;import \"google/protobuf/timestamp.proto\";option csharp_namespace = \"Api.Shared.Clients.Events.Skedular.SlackInternal.V1.Value\";enum Type {  Type_RefreshWorkspace = 0;  Type_RefreshWorkspaceMembers = 1;  Type_RefreshWorkspaceChannels = 2;  Type_SendWorkspaceLocationDailyUpdateMessage = 3;  Type_UpdateWorkspaceMemberProfileStatus = 4;  Type_DeactivateOrganizationMembersNotFoundOnSlack = 5;  Type_SendWorkspaceTeamDailyUpdateMessage = 6;}message Event {  Metadata metadata = 1;  oneof payload {    string workspaceId = 2;    string locationId = 3;    string workspaceMemberId = 4;    string teamId = 5;  }}message Metadata {  string id = 1;  string domainSource = 2;  string appSource = 3;  Type type = 4;  google.protobuf.Timestamp time = 5;  string correlationId = 6;}")]
+    protobufSchema: "syntax = \"proto3\";package slackinternal;import \"google/protobuf/timestamp.proto\";option csharp_namespace = \"Api.Shared.Clients.Events.Skedular.SlackInternal.V1.Value\";enum Type {  Type_SendWorkspaceLocationDailyUpdateMessage = 0;  Type_UpdateWorkspaceMemberProfileStatus = 1;  Type_DeactivateOrganizationMembersNotFoundOnSlack = 2;  Type_SendWorkspaceTeamDailyUpdateMessage = 3;}message Event {  Metadata metadata = 1;  oneof payload {    string workspaceId = 2;    string locationId = 3;    string workspaceMemberId = 4;    string teamId = 5;  }}message Metadata {  string id = 1;  string domainSource = 2;  string appSource = 3;  Type type = 4;  google.protobuf.Timestamp time = 5;  string correlationId = 6;}")]
 public partial class Event : IMetadataEvent
 {
     private static readonly Regex ValidKafkaTopicCharacters =
